[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/enemies/bird/bird.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Bird/Bird.gd" type="Script" id=2]
[ext_resource path="res://assets/Music/effects/hit.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=11]
radius = 11.5976
height = 5.66461

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 13.9385, 5.04364 )

[sub_resource type="DynamicFont" id=13]
size = 6
outline_size = 1
outline_color = Color( 0.0784314, 0.411765, 0.988235, 1 )
font_data = ExtResource( 4 )

[node name="Bird" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.330547, -0.220366 )
frames = SubResource( 10 )
animation = "run"
frame = 6
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.338373, -0.0011034 )
shape = SubResource( 11 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
position = Vector2( 0, 6.62494 )
process_parent = true
physics_process_parent = true

[node name="PlayerDetector" type="Area2D" parent="." groups=[
"Enemy",
]]
modulate = Color( 0.00392157, 0.0862745, 0.980392, 1 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( -0.0145912, -21.3406 )
shape = SubResource( 12 )

[node name="music_effect" type="Node2D" parent="."]

[node name="Die" type="AudioStreamPlayer" parent="music_effect"]
stream = ExtResource( 3 )
volume_db = -15.0

[node name="name" type="Label" parent="."]
margin_left = -43.0685
margin_top = -23.1612
margin_right = 46.9315
margin_bottom = -4.16122
custom_fonts/font = SubResource( 13 )
text = "Passaro do mato"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="PlayerDetector" to="." method="_body_entered"]
[connection signal="finished" from="music_effect/Die" to="." method="_on_Die_finished"]
